fix z-index for equalizer

--- a/src/components/RhythmsList/RhythmsList.scss
+++ b/src/components/RhythmsList/RhythmsList.scss
@@ -1,4 +1,5 @@
 .rhythm {
+  z-index: 2;
   height: 100%;
   padding: 16px;
   background-color: white;
